<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView android:id="@+id/statusbaricon"
        android:padding="4dip"
        android:gravity="center"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/statusBarIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ImageView>

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="6dip"
        android:orientation="vertical">

        <TextView android:id="@+id/serviceStatusTitle"
            style="@android:style/TextAppearance.StatusBar.EventContent.Title"
            android:focusable="true"
            android:singleLine="true"
            android:layout_gravity="left"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        <TextView android:id="@+id/serviceStatusText"
            style="@android:style/TextAppearance.StatusBar.EventContent"
            android:focusable="true"
            android:singleLine="true"
            android:layout_gravity="left"
            android:text="@string/status_service_running"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
	</LinearLayout>

</LinearLayout>