<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainScreen"
    android:background="#BAB1B5"
    tools:context=".MainActivity" >
    
    <View android:id="@+id/topDivider"
     android:background="#000000" 
     android:layout_width = "fill_parent"
     android:layout_height="2dip"
     android:layout_marginTop="40dip"
     android:padding="5dip"
     android:layout_centerVertical ="true"
     android:layout_alignParentTop="true"/>
    
    <TextView android:id="@+id/appTitle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/topDivider"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        />
        
    <View android:id="@+id/bottomDivider"
     android:background="#000000" 
     android:layout_width = "fill_parent"
     android:layout_height="2dip"
     android:padding="5dip"
     android:layout_centerVertical ="true"
     android:layout_below="@id/appTitle" />
    
    <Button 
        android:id="@+id/startService"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:layout_below="@id/bottomDivider"
        android:text="@string/start_service"
        android:background="@drawable/button_background"
        />
    
    <Button 
        android:id="@+id/stopService"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/startService"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:text="@string/stop_service"
        android:background="@drawable/button_background"
        />

</RelativeLayout>